--- a/KTW_Homework/008_Bit/008_Bit.vcxproj.filters
+++ b/KTW_Homework/008_Bit/008_Bit.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="005_Operator.cpp">
+    <ClCompile Include="008_Bit.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
