--- a/KTW_Homework/042_Class003_Struct/042_Class003_Struct.vcxproj.filters
+++ b/KTW_Homework/042_Class003_Struct/042_Class003_Struct.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="042_Class002.cpp">
+    <ClCompile Include="042_Class003_Struct.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
