--- a/KTW_Homework/ConstEx/ConstEx.vcxproj.filters
+++ b/KTW_Homework/ConstEx/ConstEx.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="043_Array002.cpp">
+    <ClCompile Include="ConstEx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
