김태욱 : 업데이트

--- a/KTW_Homework/ShootAnyDirection/ShootAnyDirection.vcxproj
+++ b/KTW_Homework/ShootAnyDirection/ShootAnyDirection.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{65bf27d3-8a46-4e92-8807-df64a5444b8e}</ProjectGuid>
-    <RootNamespace>BomberManClass</RootNamespace>
+    <ProjectGuid>{78b52478-2157-4d2d-b753-d3b6b5fee328}</ProjectGuid>
+    <RootNamespace>ShootAnyDirection</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BomberManClass.cpp" />
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Position.cpp" />
+    <ClCompile Include="Screen.cpp" />
+    <ClCompile Include="ShootAnyDirection.cpp" />
+    <ClCompile Include="ShootingGame.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Position.h" />
+    <ClInclude Include="Screen.h" />
+    <ClInclude Include="ShootingGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
