--- a/KTW_Homework/47ClassDefault/47ClassDefault.vcxproj
+++ b/KTW_Homework/47ClassDefault/47ClassDefault.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{0466fa06-190c-44d1-a947-ae092b11d645}</ProjectGuid>
-    <RootNamespace>Individual</RootNamespace>
+    <ProjectGuid>{64747bc6-6212-437f-a28a-d87638c335ee}</ProjectGuid>
+    <RootNamespace>My47ClassDefault</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,17 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Bullet.cpp" />
-    <ClCompile Include="ConsoleGameMath.cpp" />
-    <ClCompile Include="ConsoleGameScreen.cpp" />
-    <ClCompile Include="Individual.cpp" />
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="47ClassDefault.cpp" />
+    <ClCompile Include="ADefaultClass.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Bullet.h" />
-    <ClInclude Include="ConsoleGameMath.h" />
-    <ClInclude Include="ConsoleGameScreen.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="ADefaultClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
