--- a/KTW_Homework/DefaultClass/DefaultClass.vcxproj.filters
+++ b/KTW_Homework/DefaultClass/DefaultClass.vcxproj.filters
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="47ClassDefault.cpp" />
-    <ClCompile Include="ADefaultClass.cpp" />
+    <ClCompile Include="DefaultClass.cpp" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ADefaultClass.h" />
+    <ClInclude Include="DefaultClass.h" />
+    <ClInclude Include="Test.h" />
   </ItemGroup>
 </Project>
