김태욱 : class 디폴트, 템플릿 내보내기

--- a/KTW_Homework/DefaultClass/DefaultClass.vcxproj
+++ b/KTW_Homework/DefaultClass/DefaultClass.vcxproj
@@ -128,9 +128,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DefaultClass.cpp" />
+    <ClCompile Include="Test.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DefaultClass.h" />
+    <ClInclude Include="Test.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
