--- a/KTW_Homework/Individual/Individual.vcxproj.filters
+++ b/KTW_Homework/Individual/Individual.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Level2</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Level1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleGameMath.h">
@@ -27,6 +30,9 @@
     </ClInclude>
     <ClInclude Include="Bullet.h">
       <Filter>Level2</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Level1</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
