--- a/KTW_Homework/Homework0407/Homework0407.vcxproj
+++ b/KTW_Homework/Homework0407/Homework0407.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{505ca1f6-c816-41f3-a97f-c89d585d706e}</ProjectGuid>
-    <RootNamespace>Main</RootNamespace>
+    <ProjectGuid>{48a51554-4532-4cd5-a9a0-815ed9cd8c8c}</ProjectGuid>
+    <RootNamespace>Homework0407</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,18 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameEngineArray.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Homework0407.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameEngineArray.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="MsgBox.h" />
+    <ProjectReference Include="..\GameEngineBase\GameEngineBase.vcxproj">
+      <Project>{15d1f0d8-c87b-470f-aad6-485591a04d56}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\GameEngineConsole\GameEngineConsole.vcxproj">
+      <Project>{8c8eb667-24a2-49d3-a141-8dc17fc81688}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
