김태욱 : 프로젝트 구성

--- a/KTW_Homework/GameEngineConsole/GameEngineConsole.vcxproj.filters
+++ b/KTW_Homework/GameEngineConsole/GameEngineConsole.vcxproj.filters
@@ -10,5 +10,6 @@
     <ClInclude Include="ConsoleGameMath.h" />
     <ClInclude Include="ConsoleGameObject.h" />
     <ClInclude Include="ConsoleGameScreen.h" />
+    <ClInclude Include="GameEngineArray.h" />
   </ItemGroup>
 </Project>
