--- a/KTW_Homework/GameEngineConsole/GameEngineConsole.vcxproj
+++ b/KTW_Homework/GameEngineConsole/GameEngineConsole.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="ConsoleGameMath.h" />
     <ClInclude Include="ConsoleGameObject.h" />
     <ClInclude Include="ConsoleGameScreen.h" />
+    <ClInclude Include="GameEngineArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
