--- a/KTW_Homework/Homework0407/Homework0407.vcxproj.filters
+++ b/KTW_Homework/Homework0407/Homework0407.vcxproj.filters
@@ -2,5 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Homework0407.cpp" />
+    <ClCompile Include="Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Player.h" />
   </ItemGroup>
 </Project>
