--- a/KTW_Homework/Individual/Individual.vcxproj.filters
+++ b/KTW_Homework/Individual/Individual.vcxproj.filters
@@ -2,32 +2,42 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Individual.cpp" />
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Content</Filter>
+    </ClCompile>
+    <ClCompile Include="ConsoleObjectManager.cpp">
+      <Filter>Content</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEnum.cpp">
+      <Filter>Content</Filter>
+    </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>Level2</Filter>
+      <Filter>Content</Filter>
     </ClCompile>
     <ClCompile Include="ShootingGame.cpp">
-      <Filter>Level2</Filter>
+      <Filter>Content</Filter>
     </ClCompile>
-    <ClCompile Include="Bullet.cpp">
-      <Filter>Level2</Filter>
-    </ClCompile>
-    <ClCompile Include="ConsoleObjectManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h">
+      <Filter>Content</Filter>
+    </ClInclude>
+    <ClInclude Include="ConsoleObjectManager.h">
+      <Filter>Content</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEnum.h">
+      <Filter>Content</Filter>
+    </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>Level2</Filter>
+      <Filter>Content</Filter>
     </ClInclude>
     <ClInclude Include="ShootingGame.h">
-      <Filter>Level2</Filter>
+      <Filter>Content</Filter>
     </ClInclude>
-    <ClInclude Include="Bullet.h">
-      <Filter>Level2</Filter>
-    </ClInclude>
-    <ClInclude Include="ConsoleObjectManager.h" />
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Level2">
-      <UniqueIdentifier>{34f144dc-3c13-4c13-aa37-0d875965dcf2}</UniqueIdentifier>
+    <Filter Include="Content">
+      <UniqueIdentifier>{bffe227c-90f0-4ab5-aa94-dc1277b505bb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
