김태욱 : 업데이트

--- a/KTW_Homework/GameEngineBase/GameEngineBase.vcxproj
+++ b/KTW_Homework/GameEngineBase/GameEngineBase.vcxproj
@@ -132,9 +132,17 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="GameEngineRandom.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEngineDebug.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="GameEngineRandom.h">
       <SubType>
       </SubType>
     </ClInclude>
