--- a/KTW_Homework/GameEngineConsole/GameEngineConsole.vcxproj.filters
+++ b/KTW_Homework/GameEngineConsole/GameEngineConsole.vcxproj.filters
@@ -5,11 +5,13 @@
     <ClCompile Include="ConsoleGameMath.cpp" />
     <ClCompile Include="ConsoleGameObject.cpp" />
     <ClCompile Include="ConsoleGameScreen.cpp" />
+    <ClCompile Include="ConsoleObjectManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleGameMath.h" />
     <ClInclude Include="ConsoleGameObject.h" />
     <ClInclude Include="ConsoleGameScreen.h" />
     <ClInclude Include="GameEngineArray.h" />
+    <ClInclude Include="ConsoleObjectManager.h" />
   </ItemGroup>
 </Project>
