--- a/KTW_Homework/Homework0411/Homework0411.vcxproj.filters
+++ b/KTW_Homework/Homework0411/Homework0411.vcxproj.filters
@@ -5,10 +5,12 @@
     <ClCompile Include="GameEnum.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Bomb.cpp" />
+    <ClCompile Include="Item.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEnum.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Bomb.h" />
+    <ClInclude Include="Item.h" />
   </ItemGroup>
 </Project>
