김태욱 : 업데이트

--- a/KTW_Homework/Homework0414/Homework0414.vcxproj
+++ b/KTW_Homework/Homework0414/Homework0414.vcxproj
@@ -139,11 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Body.cpp" />
     <ClCompile Include="GameEnum.cpp" />
+    <ClCompile Include="Head.cpp" />
     <ClCompile Include="Homework0414.cpp" />
+    <ClCompile Include="Parts.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Body.h" />
     <ClInclude Include="GameEnum.h" />
+    <ClInclude Include="Head.h" />
+    <ClInclude Include="Parts.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameEngineBase\GameEngineBase.vcxproj">
